* Rearrange file for better readability. * Update styles. TODO: fix POST request.

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,6 @@
 blockquote {
     margin: 1em 0;
 }
+h3 {
+    margin: 40px 0 20px;
+}
